<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaMeme</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="gallery">Gallery</string>
    <string name="stock">Stock</string>
    <string name="take">Take a Photo</string>
    <string name="grab">Grab a Photo</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="photo">Photo</string>
    <string name="accept">Accept!</string>
    <string name="gallery_image">Image from Gallery</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="camera_button_description">Camera Button</string>
    <string name="selection_button_description">Selection Button</string>
    <string name="imgButton_take_string">Take a photo!</string>
    <string name="imgButton_select_string">Select a photo!</string>
    <string name="title_activity_photo_edit">PhotoEditActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_button_description">Save Button</string>
    <string name="upload_button_description">Upload Button</string>
    <string name="delete_button_description">Delete Button</string>
    <string name="wrong_photo">Select a Different Photo</string>
    <string name="camera_string">Camera under development.</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="stock_image">Stock Image</string>
    <string name="capture">Capture!</string>
    <string name="title_activity_test">TestActivity</string>

</resources>