<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhotoEditActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".66"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/editPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <ImageView
                android:id="@+id/image_to_edit"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/topInputText"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:inputType="textCapCharacters"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:gravity="center_horizontal" >
            </EditText>

            <EditText
                android:id="@+id/bottomInputText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:inputType="textCapCharacters"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:gravity="center_horizontal" >
            </EditText>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_upload_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        tools:context=".MainActivity" >

        <ImageButton
            android:id="@+id/imgButton_save"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/save_button"
            android:contentDescription="@string/save_button_description"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgButton_post"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/upload_button"
            android:contentDescription="@string/upload_button_description"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgButton_delete"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@drawable/delete_button"
        android:contentDescription="@string/delete_button_description"
        android:scaleType="fitCenter" />

</LinearLayout>